Initial commit of draft site and info

--- a/index.html
+++ b/index.html
@@ -1,1 +1,172 @@
-QGIS US User Group
+<!doctype html>
+
+<html>
+
+  <head>
+    <title>QGIS US User Group</title>
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+    <link href='http://fonts.googleapis.com/css?family=Quicksand:700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="styles.css">
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script type="text/javascript" src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+  </head>
+
+  <body>
+    <div class="container">
+      <div class="navbar transparent navbar-default">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12">
+              <a href="#" class="navbar-brand">QGIS US User Group</a>
+            </div>
+          </div>
+          <div class="row navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+            </button>
+          </div>
+          <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+              <li>
+                <a href="#about">About</a>
+              </li>
+              <li>
+                <a href="#meetings">Meetings</a>
+              </li>
+              <li>
+                <a href="#contact">Contact</a>
+              </li>
+              <li>
+                <a href="http://qgis.org" target="_blank">QGIS.org</a>
+              </li>
+            </ul>
+          </div>
+          <div class="container">
+            <div class="row"><div class="col-sm-12"><br/><br/><br/><br/><br/><br/></div></div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-6 lead byline">Supporting users of <a href="http://qgis.org">QGIS</a>, a free and open source Geographic Information System.</div>
+              <div class="col-md-6"></div>
+            </div>
+          </div>
+
+
+          <div class="container">
+            <div class="row"><div class="col-sm-12"><br/><br/><br/><br/></div></div>
+          </div>
+
+          <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <h3>User Meetings</h3>
+          <p class="lead">Annual user meetings: our inaugural meeting will be April 11, 2014 in DC. <a class="link" href="#meetings">Details &raquo;</a></p>
+        </div><!-- /.span4 -->
+
+        <div class="col-sm-4">
+          <h3>Online Discussions</h3>
+          <p class="lead"><a href="http://lists.osgeo.org/cgi-bin/mailman/listinfo/qgis-us-user">
+            Join us online</a> about what we're doing now and what's next.
+          </p>
+        </div><!-- /.span4 -->
+
+        <div class="col-sm-4">
+          <h3>Learn about QGIS</h3>
+          <p class="lead"><a href="http://qgis.org/">QGIS</a> is the most popular open source GIS desktop tool in the world.
+          </p>
+        </div><!-- /.span4 -->
+      </div><!-- /.row -->
+
+          </div>
+
+        <div class="container">
+      <!-- START THE FEATURETTES -->
+      <hr class="featurette-divider">
+      <a name="about"></a>
+
+      <div class="featurette">
+        <h2 class="featurette-heading">Group Goals:</span></h2>
+        <p class="lead">
+          <ul class="lead">
+          <li>Coordination of development (in the US but also globally)</li>
+          <li>QGIS information: meetings, articles in GIS magazines, QGIS information on Twitter, GIS discussion boards</li>
+          <li>Initialization of domain-specific interest groups and application modules (like waste-water, urban planning, surveying, etc.)</li>
+          <li>Organization of the annual or bi-annual QGIS user meetings. Inaugural Meeting April 11th 2014</li>
+          <li>Serve as a point of organization for regional meetups (held as Birds of a Feather type metings at regional GIS events)</li>
+          <li>Join us and share your ideas!</li>
+          </ul>
+      </div>
+
+
+
+      <hr class="featurette-divider">
+  <a name="meetings"></a>
+      <div class="featurette">
+        <h2 class="featurette-heading"><span class="muted">Come Join Us.</span></h2>
+        <p class="lead">Our <b>Inaugural US User Group Meeting</b> will take place <b>Friday, April 11, 2014 from 9 am - 6 pm</b> at OpenGovHub in Washington, DC.
+        <ul class="list-unstyled lead schedule">
+        <li><b>Schedule:</b></li>
+        <li>8am - 9am Breakfast and Social </li>
+        <li>9am - 10am Introduction and Keynotes
+          <ul>
+            <li> Larry Shaffer</li>
+            <li> Victor Olaya?</li>
+          </ul>
+        </li>
+        <li>10am - 12pm Presentations
+          <ul>
+            <li> Kate Chapman - InaSAFE - HOT</li>
+            <li> Vivien Deparday - World Bank</li>
+          </ul>
+        </li>
+        <li>12pm - 1pm Lunch</li>
+        <li>1pm - 4pm Workshops
+          <ul>
+            <li> Using QGIS with OpenGeo Suite (Jeffrey Johnson Boundless)</li>
+            <li> Becoming a QGIS Developer (Larry Shaffer Dakota Cartography)</li>
+            <li> QGIS Spatial Processing (Victor Olaya)</li>
+          </ul>
+        </li>
+        <li>5pm - Closing Discussion</li>
+        <li>5:30pm - Happy Hour</li>
+        <li>6PM - MapBox State of the Map Happy Hour</li>
+
+</ul>
+</p>
+      </div>
+
+  <hr class="featurette-divider">
+
+      <div class="featurette">
+        <h2 class="featurette-heading">Generally interested in open source GIS?... not a QGIS user but want to help?</h2>
+        <p class="lead">QGIS itself is developed by a team of dedicated volunteers and organizations. You can participate in support channels, bug reporting, improving documentation, creating tutorials, promoting use of QGIS and helping developers improve this community tool.</p>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="featurette">
+        <h2 class="featurette-heading">We Discuss Things Online. <span class="muted">Join &amp; Introduce Yourself.</span></h2>
+        <p class="lead">
+          Can't make it to a meetup?  No problem. We collaborate on projects, ask for help, and post wins
+          to our <a href="http://lists.osgeo.org/cgi-bin/mailman/listinfo/qgis-us-user">Mailing List</a>. We welcome anyone to sign-up... you might just see something you're interested in helping with.</p>
+      </div>
+
+      <hr class="featurette-divider">
+      <a name="contact"></a>
+      <div class="featurette">
+        <h2 class="featurette-heading">Want Even More Info? <span class="muted">Subscribe.</span></h2>
+        <p class="lead">Your can subscribe to our <a href="http://lists.osgeo.org/cgi-bin/mailman/listinfo/qgis-us-user">Mailing List</a> and  updates at <a href="http://twitter.com/qgis_us">Twitter</a>. We want to hear from you!</p>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <!-- /END THE FEATURETTES -->
+      </div>
+
+        </div>
+      </div>
+    </div>
+  </body>
+
+</html>
