--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>QGIS US User Group</title>
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
-    <link href='http://fonts.googleapis.com/css?family=Quicksand:700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Lato:900' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles.css">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
@@ -22,11 +22,8 @@
             </div>
           </div>
           <div class="row navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-              <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-            </button>
           </div>
-          <div class="collapse navbar-collapse">
+          <div>
             <ul class="nav navbar-nav">
               <li>
                 <a href="#about">About</a>
@@ -43,7 +40,7 @@
             </ul>
           </div>
           <div class="container">
-            <div class="row"><div class="col-sm-12"><br/><br/><br/><br/><br/><br/></div></div>
+            <div class="row"><div class="col-sm-12"><br/><br/><br/><br/><br/><br/><br/><br/><br/></div></div>
           </div>
           <div class="container">
             <div class="row">
@@ -54,7 +51,7 @@
 
 
           <div class="container">
-            <div class="row"><div class="col-sm-12"><br/><br/><br/><br/></div></div>
+            <div class="row"><div class="col-sm-12"><br/><br/><br/><br/><br/><br/><br/><br/><br/></div></div>
           </div>
 
           <div class="container">
