--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <a name="meetings"></a>
       <div class="featurette">
         <h2 class="featurette-heading"><span class="muted">Come Join Us.</span></h2>
-        <p class="lead">Our <b>Inaugural US User Group Meeting</b> will take place <b>Friday, April 11, 2014 from 9 am - 6 pm</b> at OpenGovHub in Washington, DC.
+        <p class="lead">Our <b>Inaugural US User Group Meeting</b> will take place <b>Friday, April 11, 2014 from 9 am - 6 pm</b> Location TBD (Likely OpenGovHub) in Washington, DC.
         <ul class="list-unstyled lead schedule">
         <li><b>Schedule:</b></li>
         <li>8am - 9am Breakfast and Social </li>
