--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
   <head>
-    <title>QGIS US User Group</title>
+    <title>QGIS U.S. User Group</title>
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:900' rel='stylesheet' type='text/css'>
@@ -18,7 +18,7 @@
         <div class="container">
           <div class="row">
             <div class="col-xs-12">
-              <a href="#" class="navbar-brand">QGIS US User Group</a>
+              <a href="#" class="navbar-brand">QGIS U.S. User Group</a>
             </div>
           </div>
           <div class="row navbar-header">
