--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
 
 </ul>
 </p>
+<p><iframe src="http://www.meetup.com/qgis_us/embeds/soonest_event_list?css=&amp;w=660&amp;bg=light" width="660" height="580" frameborder="0" border="0" allowtransparency="true" scrolling="no"></iframe></p>
       </div>
 
   <hr class="featurette-divider">
