--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   <hr class="featurette-divider">
 
       <div class="featurette">
-        <h2 class="featurette-heading">Generally interested in open source GIS?... not a QGIS user but want to help?</h2>
+        <h2 class="featurette-heading">Generally interested in open source GIS?... not a QGIS user yet but want to join and help?</h2>
         <p class="lead">QGIS itself is developed by a team of dedicated volunteers and organizations. You can participate in support channels, bug reporting, improving documentation, creating tutorials, promoting use of QGIS and helping developers improve this community tool.</p>
       </div>
 
