Adding hyphen to -based

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
         <div class="container">
           <div class="row">
-            <div class="col-sm-6 lead byline">Supporting U.S. based users of <a href="http://qgis.org">QGIS</a>, a free and open source Geographic Information System.</div>
+            <div class="col-sm-6 lead byline">Supporting U.S.-based users of <a href="http://qgis.org">QGIS</a>, a free and open source Geographic Information System.</div>
             <div class="col-md-6"></div>
           </div>
         </div>
