Adding link to Swiss user group

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                 <option title="Monterey" value="http://www.meetup.com/qgis_us/Monterey-CA/">Monterey</option>
               </optgroup>
               <optgroup label="World">
+                <option title="Switzerland" value="http://old.qgis.org/en/community/swiss-user-group.html">Switzerland</option>
                 <option title="Netherlands" value="http://www.qgis.nl/">Netherlands</option>
               </optgroup>
             </select>
