--- a/index.html
+++ b/index.html
@@ -44,20 +44,22 @@
             <li><a href="http://qgis.org/en/site/forusers/index.html">For Users</a></li>
             <li><a href="http://qgis.org/en/site/getinvolved/index.html">Get Involved</a></li>
             <li><a href="http://qgis.org/en/docs/index.html">Documentation</a></li>
+            <li class="navbar-dropdown">
+              <div class="select-dropdown">
+              <select id="other_groups">
+                <option value="" title="none">Other User Groups</option>
+                <optgroup label="U.S.">
+                  <option title="DC" value="http://www.meetup.com/qgis_us/Washington-DC/">DC</option>
+                  <option title="Monterey" value="http://www.meetup.com/qgis_us/Monterey-CA/">Monterey</option>
+                </optgroup>
+                <optgroup label="World">
+                  <option title="Switzerland" value="http://old.qgis.org/en/community/swiss-user-group.html">Switzerland</option>
+                  <option title="Netherlands" value="http://www.qgis.nl/">Netherlands</option>
+                </optgroup>
+              </select>
+              </div>
+            </li>
           </ul>
-          <div class="select-dropdown pull-right">
-            <select id="other_groups">
-              <option value="" title="none">Other User Groups</option>
-              <optgroup label="U.S.">
-                <option title="DC" value="http://www.meetup.com/qgis_us/Washington-DC/">DC</option>
-                <option title="Monterey" value="http://www.meetup.com/qgis_us/Monterey-CA/">Monterey</option>
-              </optgroup>
-              <optgroup label="World">
-                <option title="Switzerland" value="http://old.qgis.org/en/community/swiss-user-group.html">Switzerland</option>
-                <option title="Netherlands" value="http://www.qgis.nl/">Netherlands</option>
-              </optgroup>
-            </select>
-          </div>
         </div>
       </div>
     </div>
@@ -69,7 +71,7 @@
           <div class="col-xs-12 page-title">QGIS U.S. User Group</div>
         </div>
         <div class="row">
-          <div class="col-md-6 col-md-offset-3">
+          <div class="col-sm-12 col-md-6 col-md-offset-3">
             <ul class="page-nav">
               <li>
                 <a href="#about">About</a>
@@ -88,14 +90,8 @@
         </div>
         <div class="container">
           <div class="row">
-            <div class="col-sm-12"><br/><br/><br/><br/><br/><br/>
-            </div>
-          </div>
-        </div>
-        <div class="container">
-          <div class="row">
             <div class="col-sm-6 lead byline">Supporting U.S.-based users of <a href="http://qgis.org">QGIS</a>, a free and open source Geographic Information System.
-	       <p class="osgeo-line pull-right">QGIS is an <a href="http://www.osgeo.org/"><img src="images/osgeo_logo.png"> </a> project.</p>	
+	       <p class="osgeo-line pull-right">QGIS is an <a href="http://www.osgeo.org/"><img src="images/osgeo_logo.png"> </a> project.</p>
 	    </div>
             <div class="col-md-6"></div>
           </div>
