Cleaning up line spacing in files

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>QGIS U.S. User Group</title>
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
-    <link href='http://fonts.googleapis.com/css?family=Lato:900,300italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Lato:900,100' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles.css">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
@@ -91,7 +91,7 @@
         <div class="container">
           <div class="row">
             <div class="col-sm-6 lead byline">Supporting U.S.-based users of <a href="http://qgis.org">QGIS</a>, a free and open source Geographic Information System.
-	       <p class="osgeo-line pull-right">QGIS is an <a href="http://www.osgeo.org/"><img src="images/osgeo_logo.png"> </a> project.</p>
+	       <p class="osgeo-line">QGIS is an <a href="http://www.osgeo.org/"><img src="images/osgeo_logo.png"> </a> project.</p>
 	    </div>
             <div class="col-md-6"></div>
           </div>
