--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
                 <optgroup label="World">
                   <option title="Switzerland" value="http://old.qgis.org/en/community/swiss-user-group.html">Switzerland</option>
                   <option title="Netherlands" value="http://www.qgis.nl/">Netherlands</option>
+                  <option title="UK" value="https://twitter.com/QgisUK">United Kingdom</option>
+                  <option title="ANZ" value="https://sites.google.com/site/ausqgis/home">Australia and New Zealand</option>
                 </optgroup>
               </select>
               </div>
