--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <li>Coordination of development (in the US but also globally)</li>
                 <li>QGIS information: meetings, articles in GIS magazines, QGIS information on Twitter, GIS discussion boards</li>
                 <li>Initialization of domain-specific interest groups and application modules (like waste-water, urban planning, surveying, etc.)</li>
-                <li>Organization of the annual or bi-annual QGIS user meetings. Inaugural Meeting April 11th 2014</li>
+                <li>Organization of the annual or bi-annual QGIS user meetings. <a href='http://www.meetup.com/qgis_us/Washington-DC/1106032/">Inaugural Meeting April 11th 2014</a></li>
                 <li>Serve as a point of organization for regional meetups (held as Birds of a Feather type metings at regional GIS events)</li>
                 <li>Join us and share your ideas!</li>
               </ul>
@@ -148,7 +148,7 @@
           <div class="featurette">
             <h2 class="featurette-heading"><span class="muted">Come Join Us.</span></h2>
             <p class="lead">
-              Our <b>Inaugural US User Group Meeting</b> will take place <b>Friday, April 11, 2014 from 9 am - 6 pm</b> Location TBD (Likely <a href='http://opengovhub.org/'>OpenGovHub</a>) in Washington, DC.
+              Our <b><a href='http://www.meetup.com/qgis_us/Washington-DC/1106032/'>Inaugural US User Group Meeting</a></b> will take place <b>Friday, April 11, 2014 from 9 am - 6 pm</b> Location TBD (Likely <a href='http://opengovhub.org/'>OpenGovHub</a>) in Washington, DC.
               <ul class="list-unstyled lead schedule">
                 <li><b>Schedule:</b></li>
                 <li>8am - 9am Breakfast and Social </li>
