--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <li>Coordination of development (in the US but also globally)</li>
                 <li>QGIS information: meetings, articles in GIS magazines, QGIS information on Twitter, GIS discussion boards</li>
                 <li>Initialization of domain-specific interest groups and application modules (like waste-water, urban planning, surveying, etc.)</li>
-                <li>Organization of the annual or bi-annual QGIS user meetings. <a href='http://www.meetup.com/qgis_us/Washington-DC/1106032/">Inaugural Meeting April 11th 2014</a></li>
+                <li>Organization of the annual or bi-annual QGIS user meetings. <a href='http://www.meetup.com/qgis_us/Washington-DC/1106032/'>Inaugural Meeting April 11th 2014</a></li>
                 <li>Serve as a point of organization for regional meetups (held as Birds of a Feather type metings at regional GIS events)</li>
                 <li>Join us and share your ideas!</li>
               </ul>
