--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           <div class="featurette">
             <h2 class="featurette-heading"><span class="muted">Come Join Us.</span></h2>
             <p class="lead">
-              Our <b><a href='http://www.meetup.com/qgis_us/Washington-DC/1106032/'>Inaugural US User Group Meeting</a></b> will take place <b>Friday, April 11, 2014 from 9 am - 6 pm</b> Location TBD (Likely <a href='http://opengovhub.org/'>OpenGovHub</a>) in Washington, DC.
+              Our <b><a href='http://www.meetup.com/qgis_us/Washington-DC/1106032/'>Inaugural US User Group Meeting</a></b> will take place <b>Friday, April 11, 2014 from 9 am - 6 pm</b> Location <a href='http://opengovhub.org/'>OpenGovHub</a> in Washington, DC.
               <ul class="list-unstyled lead schedule">
                 <li><b>Schedule:</b></li>
                 <li>8am - 9am Breakfast and Social </li>
@@ -159,8 +159,8 @@
                 </li>
                 <li>10am - 12pm Presentations
                   <ul>
-                    <li> Kate Chapman - InaSAFE - HOT</li>
-                    <li> Vivien Deparday - World Bank</li>
+                    <li> Kate Chapman - <a href='http://inasafe.org/en/'>InaSAFE</a> - <a href='http://hot.openstreetmap.org/'>HOT</a></li>
+                    <li> Vivien Deparday - <a href='https://www.gfdrr.org/'>World Bank GFDRR</a></li>
                   </ul>
                 </li>
                 <li>12pm - 1pm Lunch</li>
