--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           <div class="featurette">
             <h2 class="featurette-heading"><span class="muted">Come Join Us.</span></h2>
             <p class="lead">
-              Our <b><a href='http://www.meetup.com/qgis_us/Washington-DC/1106032/'>Inaugural US User Group Meeting</a></b> will take place <b>Friday, April 11, 2014 from 9 am - 6 pm</b> Location <a href='http://opengovhub.org/'>OpenGovHub</a> in Washington, DC.
+              Our <b><a href='http://www.meetup.com/qgis_us/Washington-DC/1106032/'>Inaugural US User Group Meeting</a></b> will take place <b>Friday, April 11, 2014 from 9 am - 6 pm</b><<br/>Location <a href='http://opengovhub.org/'>OpenGovHub</a> in Washington, DC.
               <ul class="list-unstyled lead schedule">
                 <li><b>Schedule:</b></li>
                 <li>8am - 9am Breakfast and Social </li>
