Added tim to the schedule

--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
                 <li>8am - 9am Breakfast and Social </li>
                 <li>9am - 10am Introduction and Keynotes
                   <ul>
-                    <li> Larry Shaffer</li>
+                    <li>Larry Shaffer</li>
+                    <li>Tim Sutton - QGIS PSC (Remote)</li>
                   </ul>
                 </li>
                 <li>10am - 12pm Presentations
