Add register link

--- a/index.html
+++ b/index.html
@@ -179,7 +179,9 @@
                 <li>6PM - MapBox State of the Map Happy Hour</li>
               </ul>
             </p>
+            <p><font size='+2'><b><a href='http://www.meetup.com/qgis_us/Washington-DC/1106032/'>Register for this event on Meetup</a></b></font></p>
             <p>
+              Join us at one an event near you ... or organize your own.
               <iframe src="http://www.meetup.com/qgis_us/embeds/soonest_event_list?css=&amp;w=660&amp;bg=light" width="660" height="150" frameborder="0" border="0" allowtransparency="true" scrolling="no"></iframe>
             </p>
           </div>
