--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
             <p class="lead">
               Our <b><a href='http://www.meetup.com/qgis_us/Washington-DC/1106032/'>Inaugural US User Group Meeting</a></b> will take place <b><br/>
               Friday, April 11, 2014 from 9 am - 6 pm</b><br/>
-              Location <a href='http://opengovhub.org/'>OpenGovHub</a> in Washington, DC.
+              Location <a href='http://opengovhub.org/'>OpenGovHub</a> in Washington, DC.<br/>
+            <font size='+2'><b><a href='http://www.meetup.com/qgis_us/Washington-DC/1106032/'>Register for this event on Meetup</a></b></font>
               <ul class="list-unstyled lead schedule">
                 <li><b>Schedule:</b></li>
                 <li>8am - 9am Breakfast and Social </li>
@@ -179,7 +180,6 @@
                 <li>6PM - MapBox State of the Map Happy Hour</li>
               </ul>
             </p>
-            <p><font size='+2'><b><a href='http://www.meetup.com/qgis_us/Washington-DC/1106032/'>Register for this event on Meetup</a></b></font></p>
             <p>
               Join us at another event near you ... or organize your own.
               <iframe src="http://www.meetup.com/qgis_us/embeds/soonest_event_list?css=&amp;w=660&amp;bg=light" width="660" height="150" frameborder="0" border="0" allowtransparency="true" scrolling="no"></iframe>
