--- a/index.html
+++ b/index.html
@@ -150,8 +150,9 @@
             <p class="lead">
               Our <b><a href='http://www.meetup.com/qgis_us/Washington-DC/1106032/'>Inaugural US User Group Meeting</a></b> will take place <b><br/>
               Friday, April 11, 2014 from 9 am - 6 pm</b><br/>
-              Location <a href='http://opengovhub.org/'>OpenGovHub</a> in Washington, DC.<br/>
-            <font size='+2'><b><a href='http://www.meetup.com/qgis_us/Washington-DC/1106032/'>Register for this event on Meetup</a></b></font>
+              Location <a href='http://opengovhub.org/'>OpenGovHub</a> in Washington, DC.</p>
+            <p>
+            <font size='+2'><b><a href='http://www.meetup.com/qgis_us/Washington-DC/1106032/'>Register for this event on Meetup</a></b></font></p>
               <ul class="list-unstyled lead schedule">
                 <li><b>Schedule:</b></li>
                 <li>8am - 9am Breakfast and Social </li>
