Updating organization links in Meetup schedule

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   <option title="Switzerland" value="http://old.qgis.org/en/community/swiss-user-group.html">Switzerland</option>
                   <option title="Netherlands" value="http://www.qgis.nl/">Netherlands</option>
                   <option title="UK" value="http://ukqgis.wordpress.com/">United Kingdom</option>
-                  <option title="ANZ" value="https://sites.google.com/site/ausqgis/home">Australia and New Zealand</option>
+                  <option title="ANZ" value="https://sites.google.com/site/ausqgis/home">Australia &amp; NZ</option>
                 </optgroup>
               </select>
               </div>
@@ -158,8 +158,8 @@
                 <li>8am - 9am Breakfast and Social </li>
                 <li>9am - 10am Introduction and Keynotes
                   <ul>
-                    <li>Larry Shaffer</li>
-                    <li>Tim Sutton - QGIS PSC (Remote)</li>
+                    <li>Larry Shaffer - <a href="http://qgis.dakotacarto.com/">Dakota Cartography</a></li>
+                    <li>Tim Sutton - QGIS Project Steering Committee (Remote)</li>
                   </ul>
                 </li>
                 <li>10am - 12pm Presentations
@@ -171,14 +171,14 @@
                 <li>12pm - 1pm Lunch</li>
                 <li>1pm - 4pm Workshops
                   <ul>
-                    <li> Using QGIS with OpenGeo Suite (Jeffrey Johnson Boundless)</li>
-                    <li> Becoming a QGIS Developer (Larry Shaffer Dakota Cartography)</li>
-                    <li> QGIS Spatial Processing (Victor Olaya)</li>
+                  <li> Using QGIS with OpenGeo Suite (Jeffrey Johnson, <a href="http://boundlessgeo.com">Boundless</a>)</li>
+                  <li> Becoming a QGIS Developer (Larry Shaffer, <a href="http://qgis.dakotacarto.com/">Dakota Cartography</a>)</li>
+                    <li> QGIS Spatial Processing (Victor Olaya, <a href="http://boundlessgeo.com">Boundless</a>)</li>
                   </ul>
                 </li>
                 <li>5pm - Closing Discussion</li>
                 <li>5:30pm - Happy Hour</li>
-                <li>6PM - MapBox State of the Map Happy Hour</li>
+                <li>6PM - <a href="http://mapbox.com">MapBox</a> State of the Map Happy Hour (<a href="http://stateofthemap.us/">SOTM 2014</a>)</li>
               </ul>
             </p>
             <p>
