Adding notice about 1st user meeting to main splash per David/Rollie

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <div class="row">
             <div class="col-sm-4">
               <h3>User Meetings</h3>
-              <p class="lead">Annual user meetings: our inaugural meeting will be April 11, 2014 in DC. <a class="link" href="#meetings">Details &raquo;</a>
+              <p class="lead">Our <b>1st Annual User Group Meeting</b> will take place <b>April 11, 2014 in DC</b>. <a class="link" href="#meetings">Details &raquo;</a>
               </p>
             </div>
             <div class="col-sm-4">
