--- a/index.html
+++ b/index.html
@@ -158,22 +158,25 @@
                 <li>8am - 9am Breakfast and Social </li>
                 <li>9am - 10am Introduction and Keynotes
                   <ul>
+                    <li>Jeff Johnson - <a href="http://boundlessgeo.com/">Boundless</a></li>
                     <li>Larry Shaffer - <a href="http://qgis.dakotacarto.com/">Dakota Cartography</a></li>
                     <li>Tim Sutton - QGIS Project Steering Committee (Remote)</li>
                   </ul>
                 </li>
-                <li>10am - 12pm Presentations
+                <li>10am - 11pm Presentations
                   <ul>
                     <li> Kate Chapman - <a href='http://inasafe.org/en/'>InaSAFE</a> - <a href='http://hot.openstreetmap.org/'>HOT</a></li>
                     <li> Vivien Deparday - <a href='https://www.gfdrr.org/'>World Bank GFDRR</a></li>
+                    <li> Yewondwossen Assefa - <a href='https://www.gfdrr.org/'>World Bank GFDRR</a></li>
                   </ul>
                 </li>
+                <li>11am - 12pm - Future of QGIS Discussion</li>
                 <li>12pm - 1pm Lunch</li>
                 <li>1pm - 4pm Workshops
                   <ul>
                   <li> Using QGIS with OpenGeo Suite (Jeffrey Johnson, <a href="http://boundlessgeo.com">Boundless</a>)</li>
                   <li> Becoming a QGIS Developer (Larry Shaffer, <a href="http://qgis.dakotacarto.com/">Dakota Cartography</a>)</li>
-                    <li> QGIS Spatial Processing (Victor Olaya, <a href="http://boundlessgeo.com">Boundless</a>)</li>
+                  <li> QGIS Spatial Processing (Victor Olaya, <a href="http://boundlessgeo.com">Boundless</a>)</li>
                   </ul>
                 </li>
                 <li>5pm - Closing Discussion</li>
