--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
                 <li>1pm - 4pm Workshops
                   <ul>
                   <li> Using QGIS with OpenGeo Suite (Jeffrey Johnson, <a href="http://boundlessgeo.com">Boundless</a>)</li>
-                  <li> Becoming a QGIS Developer (Larry Shaffer, <a href="http://qgis.dakotacarto.com/">Dakota Cartography</a>)</li>
+                  <li> Becoming a QGIS Developer (Larry Shaffer, <a href="http://qgis.dakotacarto.com/">Dakota Cartography</a>).<br/>
+                  <i>Prerequisites:</i> install <a href="https://www.virtualbox.org">VirtualBox</a> and the <a href="http://live.osgeo.org/en/quickstart/virtualization_quickstart.html">OSGeoLive 7.9 Virtual Machine</a> (~ 3 GB)</li>
                   </ul>
                 </li>
                 <li>5pm - Closing Discussion</li>
