--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         </div>
         <div class="collapse navbar-collapse" id="nav-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="http://qgis.org/en/site/about/index.html">Discover QGIS</a></li>
-            <li><a href="http://qgis.org/en/site/forusers/index.html">For Users</a></li>
-            <li><a href="http://qgis.org/en/site/getinvolved/index.html">Get Involved</a></li>
-            <li><a href="http://qgis.org/en/docs/index.html">Documentation</a></li>
+            <li><a href="http://qgis.org/##/site/about/index.html">Discover QGIS</a></li>
+            <li><a href="http://qgis.org/##/site/forusers/index.html">For Users</a></li>
+            <li><a href="http://qgis.org/##/site/getinvolved/index.html">Get Involved</a></li>
+            <li><a href="http://qgis.org/##/docs/index.html">Documentation</a></li>
             <li class="navbar-dropdown">
               <div class="select-dropdown">
               <select id="other_groups">
@@ -52,10 +52,12 @@
                   <option title="DC" value="http://www.meetup.com/qgis_us/Washington-DC/">DC</option>
                   <option title="Monterey" value="http://www.meetup.com/qgis_us/Monterey-CA/">Monterey</option>
                 </optgroup>
-                <optgroup label="World">
+                <optgroup label="Europe">
                   <option title="Switzerland" value="http://old.qgis.org/en/community/swiss-user-group.html">Switzerland</option>
                   <option title="Netherlands" value="http://www.qgis.nl/">Netherlands</option>
                   <option title="UK" value="http://ukqgis.wordpress.com/">United Kingdom</option>
+                  <option title="Italy" value="http://qgis.it/">Italym</option>
+                <optgroup label="World">
                   <option title="ANZ" value="https://sites.google.com/site/ausqgis/home">Australia &amp; NZ</option>
                 </optgroup>
               </select>
@@ -70,7 +72,7 @@
     <div class="container">
       <div class="container">
         <div class="row">
-          <div class="col-xs-12 page-title">QGIS U.S. User Group</div>
+          <div class="col-xs-12 page-title">QGIS ## User Group</div>
         </div>
         <div class="row">
           <div class="col-sm-12 col-md-6 col-md-offset-3">
