--- a/index.html
+++ b/index.html
@@ -53,10 +53,12 @@
                   <option title="Monterey" value="http://www.meetup.com/qgis_us/Monterey-CA/">Monterey</option>
                 </optgroup>
                 <optgroup label="Europe">
-                  <option title="Switzerland" value="http://old.qgis.org/en/community/swiss-user-group.html">Switzerland</option>
+                  <option title="Switzerland" value="http://qgis.ch">Switzerland</option>
                   <option title="Netherlands" value="http://www.qgis.nl/">Netherlands</option>
+                  <option title="UK" value="http://qgis.uk/">United Kingdom</option>
                   <option title="UK" value="http://ukqgis.wordpress.com/">United Kingdom</option>
-                  <option title="Italy" value="http://qgis.it/">Italym</option>
+                  <option title="UK" value="https://ieqgis.wordpress.com/category/qgis/">United Kingdom</option>
+                  <option title="Italy" value="http://qgis.it/">Italy</option>
                 <optgroup label="World">
                   <option title="ANZ" value="https://sites.google.com/site/ausqgis/home">Australia &amp; NZ</option>
                 </optgroup>
