--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
         <div class="container">
           <div class="row">
-            <div class="col-sm-6 lead byline">Supporting U.S.-based users of <a href="http://qgis.org">QGIS</a>, a free and open source Geographic Information System.
+            <div class="col-sm-6 lead byline">Supporting ##-based users of <a href="http://qgis.org">QGIS</a>, a free and open source Geographic Information System.
 	       <p class="osgeo-line">QGIS is an <a href="http://www.osgeo.org/"><img src="images/osgeo_logo.png"> </a> project.</p>
 	    </div>
             <div class="col-md-6"></div>
