--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <html>
   <head>
-    <title>QGIS ## User Group</title>
+    <title>QGIS IT User Group</title>
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:900,100' rel='stylesheet' type='text/css'>
